# taxi_demand_predictor

./: README.md  pyproject.toml
.github/workflows/: inference.yml  inference_pipeline.yml  training_pipeline.yml
data/transformed/: ts_data_2024_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_timeseries.ipynb  03_transform_ts_data_into_features_and_target.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
scripts/: backfill_feature_group.py  inference_pipeline.py  training_pipeline.py
src/: config.py  feature_store_api.py  inference.py
