[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Toma Ijatomi",email = "117505903+TomaIjatomi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas (<2.2.0)",
    "hopsworks[python] (>=4.1.8,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
